scripts/linux/dns-dashboard.yaml
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: dns-kubernetes-dashboard
spec:
  ports:
    - port: 5000
  selector:
    name: dns-kubernetes-dashboard
