scripts/linux/kubernetes-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: my.io
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-metrics-scraper
              servicePort: 8000
    - host: rancher.my.io
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-metrics-scraper
              servicePort: 443
    - host: dashboard.my.io
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-metrics-scraper
              servicePort: 80
    - host: git.my.io
      http:
        paths:
          - path: /
            backend:
              serviceName: dashboard-metrics-scraper
              servicePort: 8001
